A social platform with Django

--- a/simplesocial/templates/index.html
+++ b/simplesocial/templates/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
-
 {% block content %}
 
-    <h1>Welcome to index.htmk</h1>
+    <h1>Welcome to Star Social!</h1>
 
 {% endblock %}
